--- a/Study of a Simple, Expressive and Consistent Baseline Graph Feature Representation.ipynb
+++ b/Study of a Simple, Expressive and Consistent Baseline Graph Feature Representation.ipynb
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -754,7 +754,9 @@
      "text": [
       "Dataset: MUTAG, Embedding dim: 25, Accuracy: 0.878977, Std: 0.070240\n",
       "Dataset: ENZYMES, Embedding dim: 52, Accuracy: 0.406667, Std: 0.062893\n",
-      "Dataset: PROTEINS_full, Embedding dim: 105, Accuracy: 0.752872, Std: 0.034547\n"
+      "Dataset: PROTEINS_full, Embedding dim: 105, Accuracy: 0.752872, Std: 0.034547\n",
+      "Dataset: DD, Embedding dim: 585, Accuracy: 0.744513, Std: 0.032746\n",
+      "Dataset: NCI1, Embedding dim: 58, Accuracy: 0.732835, Std: 0.020819\n"
      ]
     }
    ],
